# dsprites-mechinterp

./: pyproject.toml
notebooks/: clip_questions.ipynb
src/: clip_lens.py
